<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:id="@+id/ver"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:visibility="visible">

    <EditText
        android:id="@+id/NAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Name."
        android:inputType="textCapWords"
         />

    <TextView
        android:id="@+id/topping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:visibility="visible" />

    <CheckBox


        android:id="@+id/Cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:text="@string/whipped_cream" android:textSize="16sp"/>

    <CheckBox


        android:id="@+id/Choco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:text="chocolate" android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="16dp"
        android:text="@string/quality"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:visibility="visible"/>







    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/increment"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="#996666"
            android:onClick="increment"
            android:text="@string/inc"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/howmany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="10dp"
            android:text="@string/_2"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/decrement"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="#996666"
            android:onClick="decrement"
            android:text="@string/dec"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/order_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/ordersummary"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:text="@string/_10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#660000"
        android:onClick="submitOrder"
        android:padding="20dp"
        android:text="@string/order"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


</LinearLayout>

</ScrollView>